syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package battle_city_ds;
option go_package = "pb;pb";

service Coms {
  rpc addMessage(Message) returns (google.protobuf.Empty);
  //  rpc getProduct(ProductID) returns (google.protobuf.Empty);
}

message Message {
  enum Direction {
    STEADY = 0;
    UP = 1;
    DOWN = 2;
    LEFT = 3;
    RIGHT = 4;
  }
  message TankPosition {
    uint32 x = 1;
    uint32 y = 2;
  }
  message BulletPosition {
    uint32 x = 1;
    uint32 y = 2;
  }

  message Action {
    google.protobuf.Timestamp ts = 1;
    Direction tankDirection = 2;
  }
  
  uint32 tankState = 1;
  TankPosition tankPosition = 2;
  uint32 bulletState = 3;
  BulletPosition bulletPosition = 4;
  Direction bulletDirection = 5;
  repeated Action action = 6;
  string host = 7;
}

// protoc --go_out=connection --go-grpc_out=connection connection/pb/*.proto
